transmission/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
spec:
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      securityContext:
        fsGroup: 110000
      containers:
        - name: transmission
          image: tranmission-image
          volumeMounts:
            - mountPath: /downloads
              name: data
            - mountPath: /config
              name: config-volume
            - mountPath: /watch
              name: watch-volume
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 9091
              protocol: TCP
            - containerPort: 51413
              protocol: TCP
            - containerPort: 51413
              protocol: UDP
      volumes:
        - name: data
          nfs:
            server: 192.168.1.31 # IP to our NFS server
            path: /mnt/media # The exported directory
            readOnly: false
        - name: config-volume
          emptyDir: {}
        - name: watch-volume
          emptyDir: {}
