transmission/service.yaml
kind: Service
apiVersion: v1
metadata:
    name: transmission-service
    namespace: transmission
spec:
    type: NodePort
    selector:
        app: transmission
    ports:
    - protocol: TCP
      name: web-interface
      port: 9091
      nodePort: 31091
    - protocol: TCP
      name: torrent-tcp
      port: 51413
      nodePort: 31413
    - protocol: UDP
      name: torrents-udp
      port: 51413
      nodePort: 31413
