transmission/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: transmission
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: transmission.kube.home
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: transmission-service
              port:
                name: web-interface
